<resources>
    <string name="app_name">Tower Hunter</string>
    <string name="general_yes">Da</string>
    <string name="general_no">Ne</string>
    <string name="general_maybe">Mogoče</string>
    <string name="general_continue">Naprej</string>
    <string name="new_user_welcome_message">Dobrodošli v aplikaciji\nTower Hunter</string>
    <string name="new_user_vegetation_management_assessment_message">Ali ste usposobljeni za ocenjevanje stanja vegetacije?</string>
    <string name="landscape_warning_message">Pred fotografiranjem\ntelefon obrnite.</string>
    <string name="photo_example_confirmation_button">Naprej</string>
    <string name="photo_example_text_1">Postavite se pod daljnovod.</string>
    <string name="photo_example_text_2">Slikajte vzporedno s tlemi (ne obračajte kamere navzgor ali navzdol).</string>
    <string name="camera_missing_permission_warning">Aplikacija potrebuje dovoljenje za uporabo kamere.</string>
    <string name="camera_take_photo">Zajemi sliko</string>
    <string name="camera_unknown_error">Med zajemanjem slike je prišlo do napake. V nastavitvah, prosimo, preverite dovoljenja za uporabo kamere in lokacije.</string>
    <string name="photo_confirmation_confirm">Potrdi</string>
    <string name="photo_confirmation_retake">Nova slika</string>
    <string name="vegetation_question_not_qualified">Nisem strokovnjak za ocenjevanje</string>
    <string name="vegetation_question_title">Ali je potrebno vegetacijo urediti?</string>
    <string name="photo_upload_result_new_photo">Zajemi novo fotografijo</string>
    <string name="photo_upload_result_success">Fotografija je bila poslana!\n\nHvala!</string>
    <string name="photo_upload_result_fail">Med pošiljanjem fotografije je prišlo do napake.\n\nOb ponovni prijavi v aplikacijo in z boljšo internetno povezavo, boste lahko fotografijo ponovno poskusili poslati.</string>
    <string name="location_permission_message">Aplikacija potrebuje dostop do vaše lokacije.</string>
    <string name="location_permission_warning">Dovoljenje za lokacijo mora biti vključeno v nastavitvah</string>
    <string name="main_menu_title">Dobrodošli v aplikaciji\nTower Hunter!</string>
    <string name="main_menu_button_new_photo">Zajemi novo fotografijo</string>
    <string name="main_menu_button_upload_failed_photos">Pošlji neuspele fotografije</string>
    <string name="retry_failed_uploads_progress">Fotografije se pošiljajo</string>
    <string name="retry_failed_uploads_button_done">Nazaj</string>
    <string name="retry_failed_uploads_error">Pri pošiljanju je prišlo do težave, poskusite kasneje.</string>
    <string name="retry_failed_uploads_success">Vse fotografije so bile uspešno poslane.</string>
    <string name="photo_upload_in_progress">Fotografija se pošilja</string>
</resources>
