<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.vegetationStateAssessmentFragment.VegetationStateAssessmentFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_vegetation_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView3"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/vegetation_question_title"
        app:layout_constraintBottom_toTopOf="@id/yesButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        style="@style/Button.Primary"
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:text="@string/general_yes"
        app:layout_constraintBottom_toTopOf="@id/maybeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/verticalGuideline"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"/>

    <Button
        style="@style/Button.Primary"
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:text="@string/general_no"
        app:layout_constraintBottom_toTopOf="@id/maybeButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/verticalGuideline"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"/>

    <Button
        style="@style/Button.Primary"
        android:id="@+id/maybeButton"
        android:layout_width="160dp"
        android:text="@string/general_maybe"
        app:layout_constraintBottom_toTopOf="@id/notQualifiedButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/notQualifiedButton"
        style="@style/Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/vegetation_question_not_qualified"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>