<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.mainMenu.MainMenuFragment"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp" />

    <TextView
        style="@style/Text.Title"
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginTop="32dp"
        android:text="@string/main_menu_title"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_marginTop="64dp">

        <Button
            style="@style/Button.Primary"
            android:id="@+id/newPhotoButton"
            android:layout_width="match_parent"
            android:text="@string/main_menu_button_new_photo"/>

        <Button
            style="@style/Button.Primary"
            android:id="@+id/uploadFailsButton"
            android:layout_width="match_parent"
            android:text="@string/main_menu_button_upload_failed_photos"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>