<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.newUser.NewUserFragment"
    android:clipChildren="false">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Text.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_user_welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_new_user_assessment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            android:layout_margin="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/new_user_vegetation_management_assessment_message"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <Button
            style="@style/Button.Primary"
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/general_yes" />

        <Button
            style="@style/Button.Primary"
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/general_no"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>