<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:layout_marginRight="8dp">

        <TextView
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_example_text_1"
            android:gravity="center"
            android:background="@drawable/background_photo_example_text"
            android:padding="8dp"/>

        <TextView
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_example_text_2"
            android:gravity="center"
            android:background="@drawable/background_photo_example_text"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <Button
        style="@style/Button.Primary"
        android:id="@+id/nextButton"
        android:layout_width="320dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/photo_example_confirmation_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/img_photo_example"/>

</androidx.constraintlayout.widget.ConstraintLayout>